# cleon-gpt

./: README.md  cleon-gpt.code-workspace  docker-compose.yml
.devcontainer/backend-container/: Dockerfile  devcontainer.json
.devcontainer/frontend-container/: devcontainer.json
backend/: README.md  pyproject.toml
backend/backend/: api.py  asgi.py  settings.py  urls.py
backend/conversations/: admin.py  api.py  consumers.py  models.py  routing.py  schemas.py  tests.py
backend/conversations/migrations/: 0001_initial.py
backend/conversations/services/: conversations_service.py
backend/scripts/: install-dependencies.sh  seed_database.py
backend/users/: api.py  models.py  schemas.py  tests.py
backend/users/migrations/: 0001_initial.py
backend/users/services/: users_service.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
wiki/: developer-guide.md
