[project]
dependencies = [
  "channels[daphne]>=4.1.0",
  "django-extensions>=3.2.3",
  "django-ninja>=1.3.0",
  "django>=5.1.2",
  "langchain-openai>=0.2.5",
  "langchain>=0.3.6",
  "ruff>=0.7.1",
]
name = "backend"
requires-python = ">=3.12"
version = "0.1.0"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
